--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,14 +9,14 @@ on:
       dockerfile:
         required: true
         type: string
-      image_name:
-        required: true
-        type: string
     secrets:
       GC_SERVICE_ACCOUNT_SECRET:
         required: true
       GC_PROJECT_ID:
         required: true
+
+env:
+  DOCKER_IMG_PATH: europe-west1-docker.pkg.dev/${{ secrets.GC_PROJECT_ID  }}/docker-repo/frontend:latest
 
 jobs:
   build:
@@ -37,7 +37,7 @@ jobs:
           ref: ${{ inputs.branch }}
       
       - name: Build Docker Image
-        run: docker build --tag ${{ inputs.image_name }} --file ${{ inputs.dockerfile }} .
+        run: docker build --tag ${{ env.DOCKER_IMG_PATH }} --file ${{ inputs.dockerfile }} .
 
       - name: Push Docker Image
-        run: docker push ${{ inputs.image_name }}
+        run: docker push ${{ env.DOCKER_IMG_PATH }}
