--- a/.github/workflows/helm-upgrade.yml
+++ b/.github/workflows/helm-upgrade.yml
@@ -22,9 +22,41 @@ env:
   REGION: europe-west1-c 
 
 jobs:
-  build:
+  check-kubernetes:
+    name: 'Check Kubernetes'
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./helm
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Authenticate to Google Cloud
+      run: |
+        echo "${{ secrets.GC_SERVICE_ACCOUNT_SECRET }}" | base64 --decode > $GOOGLE_APPLICATION_CREDENTIALS
+        echo $SERVICE_ACCOUNT_EMAIL
+        gcloud auth activate-service-account $SERVICE_ACCOUNT_EMAIL --key-file=$GOOGLE_APPLICATION_CREDENTIALS
+        gcloud config set project ${{ secrets.GC_PROJECT_ID }}
+
+    # Get the GKE credentials so we can deploy to the cluster
+    - name: Get GKE credentials
+      uses: google-github-actions/get-gke-credentials@db150f2cc60d1716e61922b832eae71d2a45938f
+      with:
+        cluster_name: ${{ env.CLUSTER }}
+        location: ${{ env.REGION }}
+        project_id: ${{ secrets.GC_PROJECT_ID }}
+
+  upgrade-kubernetes:
     name: 'Upgrade Kubernetes'
     runs-on: ubuntu-latest
+    needs: [
+        check-kubernetes
+    ]
+    if: ${{ always() && !cancelled() && needs.check-kubernetes.result == 'success' }}
 
     defaults:
       run:
@@ -58,7 +90,7 @@ jobs:
           echo $tenant
         done
     
-    - name: Uninstall services with helm - Frontend and Gateway
+    - name: Upgrade services with helm - Frontend and Gateway
       run: |
         helm upgrade gateway ./infrastructure/
         helm upgrade frontend ./frontend/  
