Upgrade terraform with bucket name

--- a/.github/workflows/helm-upgrade.yml
+++ b/.github/workflows/helm-upgrade.yml
@@ -104,4 +104,4 @@ jobs:
     - name: On failure
       if: failure()
       run: |
-        echo "Kubernetes Cluster is not running"
+        echo "Services not running"
