Remove wrong quote

--- a/.github/workflows/dotnet-testing.yml
+++ b/.github/workflows/dotnet-testing.yml
@@ -28,4 +28,4 @@ jobs:
         run: dotnet restore "${{ inputs.name }}/${{ inputs.name }}.Presentation/${{ inputs.name }}.Presentation.csproj"
 
       - name: Test with dotnet
-        run: dotnet test ""${{ inputs.name }}.dll" --logger trx
+        run: dotnet test "${{ inputs.name }}.dll" --logger trx
