--- a/.github/workflows/helm-upgrade.yml
+++ b/.github/workflows/helm-upgrade.yml
@@ -10,6 +10,10 @@ on:
         required: false
         type: string
         default: msi-cad-vw-cluster
+      bucket:
+        required: false
+        type: string
+        default: ${{ inputs.bucket }}
     secrets:
       GC_SERVICE_ACCOUNT:
         required: true
@@ -86,7 +90,7 @@ jobs:
 
     - name: Download Tenants.json from Bucket and print tenants
       run: |
-        gcloud storage cp gs://msi-cad-vw-terraform-backend/tenants.json tenants.json
+        gcloud storage cp gs://${{ inputs.bucket }}/tenants.json tenants.json
         tenants=$(jq -r '.[].name' tenants.json)
         for tenant in $tenants; do
           echo $tenant
