Outsourcing of backend bucket

--- a/.github/workflows/helm-start.yml
+++ b/.github/workflows/helm-start.yml
@@ -9,7 +9,11 @@ on:
         required: false
         type: string
         default: msi-cad-vw-cluster
-      
+      bucket:
+        required: false
+        type: string
+        default: "msi-cad-vw-terraform-backend"
+
     secrets:
       GC_SERVICE_ACCOUNT:
         required: true
@@ -54,7 +58,7 @@ jobs:
 
     - name: Download Tenants.json from Bucket and print tenants
       run: |
-        gcloud storage cp gs://msi-cad-vw-terraform-backend/tenants.json tenants.json
+        gcloud storage cp gs://${{ inputs.bucket }} /tenants.json tenants.json
         tenants=$(jq -r '.[].name' tenants.json)
         for tenant in $tenants; do
           echo $tenant
