--- a/.github/workflows/helm-upgrade.yml
+++ b/.github/workflows/helm-upgrade.yml
@@ -10,16 +10,15 @@ on:
         required: false
         type: string
         default: msi-cad-vw-cluster
-      bucket:
-        required: false
-        type: string
-        default: "msi-cad-vw-terraform-backend"
+
     secrets:
       GC_SERVICE_ACCOUNT:
         required: true
       GC_SERVICE_ACCOUNT_SECRET:
         required: true
       GC_PROJECT_ID:
+        required: true
+      GC_BACKEND_BUCKET:
         required: true
 
 env:
@@ -90,7 +89,7 @@ jobs:
 
     - name: Download Tenants.json from Bucket and print tenants
       run: |
-        gcloud storage cp gs://${{ inputs.bucket }}/tenants.json tenants.json
+        gcloud storage cp gs://${{ secrets.GC_BACKEND_BUCKET }}/tenants.json tenants.json
         tenants=$(jq -r '.[].name' tenants.json)
         for tenant in $tenants; do
           echo $tenant
