--- a/.github/workflows/helm-one-service.yml
+++ b/.github/workflows/helm-one-service.yml
@@ -34,7 +34,7 @@ env:
 
 jobs:
   build:
-    name: Start Services
+    name: Start or Stop Services
     runs-on: ubuntu-latest
 
     defaults:
@@ -61,22 +61,12 @@ jobs:
         location: ${{ env.REGION }}
         project_id: ${{ secrets.GC_PROJECT_ID }}
 
-    - name: Download Tenants.json from Bucket and print tenants
-      run: |
-        gcloud storage cp gs://${{ secrets.GC_BACKEND_BUCKET }}/tenants.json tenants.json
-        tenants=$(jq -r '.[].name' tenants.json)
-        for tenant in $tenants; do
-          echo $tenant
-        done
-
     - name: Install service
       if: ${{ inputs.restart == true }}
-      continue-on-error: true
       run: |
         helm install parkspace-${{ inputs.name }} ./backend/ --set namespace=${{ inputs.name }}
 
     - name: Uninstall service
       if: ${{ inputs.restart == false }}
-      continue-on-error: true
       run: |
         helm uninstall parkspace-${{ inputs.name }}
