Add version check to helm start

--- a/.github/workflows/helm-start.yml
+++ b/.github/workflows/helm-start.yml
@@ -62,6 +62,9 @@ jobs:
           echo $tenant
         done
 
+    - name: Get version
+      run: helm version
+
     - name: Start services with helm - Frontend and Gateway
       continue-on-error: true
       run: |
