--- a/.github/workflows/helm-build.yml
+++ b/.github/workflows/helm-build.yml
@@ -64,8 +64,10 @@ jobs:
       - name: List
         run: |
           ls -la
+          ls -la helm
+          ls -la helm/backend
+          ls -la helm/frontend
           ls -la ${{ inputs.service_dir }}
-          ls -ls helm
 
       - name: Create Helm Chart tgz
         run: helm package ${{ inputs.service_dir }} --version ${{ inputs.version }}
