--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -48,8 +48,10 @@ jobs:
       - name: Create frontend env
         if: ${{ inputs.service == 'frontend' }}
         run: |
-          echo "${{ secrets.REACT_JS_ENV }}" > .env
-          cat .env
+          echo "${{ secrets.REACT_JS_ENV }}" > app/.env
+          cat app/.env
+          ls -l
+          ls -l app
       
       - name: Build Docker Image
         run: docker build --tag ${{ inputs.service }}:latest --file ${{ inputs.dockerfile }} ${{ inputs.docker_build_path }}
