--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -52,6 +52,10 @@ jobs:
           cat app/.env
           ls -la
           ls -la app
+
+          while IFS='=' read -r name value; do
+            export "$name=$value"
+          done < app/.env
       
       - name: Build Docker Image
         run: docker build --tag ${{ inputs.service }}:latest --file ${{ inputs.dockerfile }} ${{ inputs.docker_build_path }}
