--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -48,14 +48,18 @@ jobs:
       - name: Create frontend env
         if: ${{ inputs.service == 'frontend' }}
         run: |
-          echo "${{ secrets.REACT_JS_ENV }}" > app/.env
-          cat app/.env
+          cd app
+          echo "${{ secrets.REACT_JS_ENV }}" > .env
+          cat .env
           ls -la
           ls -la app
 
           while IFS='=' read -r name value; do
             export "$name=$value"
           done < app/.env
+
+          npm run install
+          npm run build
       
       - name: Build Docker Image
         run: docker build --tag ${{ inputs.service }}:latest --file ${{ inputs.dockerfile }} ${{ inputs.docker_build_path }}
